--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,9 +1,30 @@
-{ "name": "@reservue/{{name}}", "private": true, "version": "0.1.0", "exports":
-{ ".": "./index.ts" }, "typesVersions": { "*": { "*": [ "src/*" ] } },
-"license": "MIT", "scripts": { "clean": "rm -rf .turbo node_modules", "lint":
-"eslint .", "format": "prettier --check . --ignore-path ../../.gitignore",
-"typecheck": "tsc --noEmit" }, "devDependencies": { "@reservue/eslint-config":
-"workspace:^0.2.0", "@reservue/prettier-config": "workspace:^0.1.0",
-"@reservue/tsconfig": "workspace:^0.1.0", "eslint": "^8.56.0", "typescript":
-"^5.2.2" }, "eslintConfig": { "extends": [ "@reservue/eslint-config/base" ] },
-"prettier": "@reservue/prettier-config" }
+{
+  "name": "@reservue/{{ name }}",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
+  "license": "MIT",
+  "scripts": {
+    "clean": "rm -rf .turbo node_modules",
+    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@reservue/eslint-config": "workspace:^0.2.0",
+    "@reservue/prettier-config": "workspace:^0.1.0",
+    "@reservue/tsconfig": "workspace:^0.1.0",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
+    "typescript": "^5.3.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@reservue/eslint-config/base"
+    ]
+  },
+  "prettier": "@reservue/prettier-config"
+}
